fix alignment and height of items in footer

--- a/solucky-react-app/src/components/Footer.css
+++ b/solucky-react-app/src/components/Footer.css
@@ -111,7 +111,7 @@
     gap: 15px;
     text-align: left; 
     width: 260px;
-    height: 175px;
+    height: fit-content;
 }
 
 .position-name{
@@ -185,7 +185,7 @@
   @media (max-width: 600px) {
     .footer {
       flex-direction: column;
-      align-items: center;
+      align-items: start;
       padding: 24px 16px;
       gap: 32px;
     }
